--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -19,5 +19,5 @@ jobs:
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: test
       run: |
-        g++ testfile.cc 
+        g++  Genisis-miniproject/test/testfile.cc -o all.out
         valgrind ./all.out
